# gitlab-nexus-cpp-conan-cmake-containers-demo-fibonacci-webservice

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  build-image.sh  build.sh  conanfile.py  deploy-to.sh  get-version.sh  run-image.sh
ansible/: playbook.yml
src/: app_component.hpp  fibonacci_handler.cpp  fibonacci_handler.hpp  main.cpp
src/controller/: fibonacci_controller.hpp
src/dto/: dtos.hpp
test/: fibonacci_handler_tests.cpp
test_package/: conanfile.py
